--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,8 @@
     -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
     -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
     transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-    margin-top: 20px; }
+    margin-top: 20px;
+    font-size: 1.5em;
+    padding: .3em .5em; }
 
 /*# sourceMappingURL=main.css.map */
