--- a/css/main.scss
+++ b/css/main.scss
@@ -23,6 +23,8 @@
 			-o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 			transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 			margin-top: 20px;
+			font-size: 1.5em;
+			padding: .3em .5em;
 		}
 	}
 }
